@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.9-3
-Date: 2012-08-09
+Date: 2012-08-10
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
