@@ -1,4 +1,5 @@
 0.9-2
+- swSCTp(): accept conductivity in mS/cm and S/m
 - as.ctd(): accept TEOS-10 values SA and CT
 - make TEOS routines more resistant to unphysical values
 - remove unwanted files during build process
